# Vicon-DataStream-SDK-examples

./: .gitignore  LICENSE.txt  readme.md
Minimal_Matlab/: vds_minimal_1.m
Minimal_Python/: vds_minimal_1.py
Template_CPP/: .gitignore  readme.md  readme.txt
Template_CPP/scripts/: VDSI_bashrc_append.sh  VDSI_clearBuild.ps1  VDSI_cmake_build.sh  VDSI_cmake_rebuild.sh  VDSI_rebuild.ps1  VDSI_runExe.ps1  bashrc_append.sh  bj_run_cmake.sh
Template_CPP/src/: CMakeLists.txt
Template_CPP/src/vicon_template/: CMakeLists.txt  CSV_Exporter.h  VDS_Interface.h  main.h  vds_template_1.cpp  vds_template_2.cpp  vds_template_3.cpp  vds_template_4.cpp
Template_Matlab/: VDSExporter.m  VDSInterface.m  VDSPoint.m  VDSPoint_Marker.m  VDSPoint_Object.m  readme.md  vds_template_1.m  vds_template_2.m  vds_template_3.m  vds_template_4.m
Template_Python/: VDSInterface.py  readme.md  vds_template_1.py  vds_template_2.py  vds_template_3.py
Template_ROS/: readme.md
